--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -3877,9 +3877,9 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #e91e63;
+  --bs-btn-color: #20640b;
   --bs-btn-border-color: #e91e63;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: #000000;
   --bs-btn-hover-bg: #e91e63;
   --bs-btn-hover-border-color: #e91e63;
   --bs-btn-focus-shadow-rgb: 233, 30, 99;
